<resources>
    <string name="app_name">Gdansk Airport</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="flights">Flights</string>
    <string name="arrivals">Arrivals</string>
    <string name="departures">Departures</string>
    <string name="destinations">Destinations map</string>
    <string name="passenger_area">Passenger Area</string>
    <string name="before_flight">Before Flight</string>
    <string name="transportation">Transportation</string>
    <string name="luggage">Luggage</string>
    <string name="checking_in">Checking In</string>
    <string name="parking">Parking</string>
    <string name="terminal">Terminal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_destination">Destination</string>
    <string name="header_flight">Flight</string>
    <string name="header_freighter">Freighter</string>
    <string name="header_time">Time</string>
    <string name="header_exp_time">Exp. time</string>
    <string name="header_remarks">Remarks</string>
    <string name="section_today">Today</string>
    <string name="section_tomorrow">Next day</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
	<string name="AAR">Aarhus</string>
<string name="ABZ">Aberdeen</string>
<string name="ACE">Lanzarote</string>
<string name="AES">Alesund Vigra</string>
<string name="AGP">Malaga</string>
<string name="ALC">Alicante</string>
<string name="ALY">Alexandria el Nouzha</string>
<string name="AMS">Amsterdam</string>
<string name="ARN">Stockholm Arlanda</string>
<string name="BCN">Barcelona</string>
<string name="BFS">Belfast</string>
<string name="BGO">Bergen</string>
<string name="BGY">Milan Bergamo</string>
<string name="BHX">Birmingham</string>
<string name="BLL">Billund Legoland</string>
<string name="BOJ">Bourgas</string>
<string name="BRS">Bristol</string>
<string name="DBV">Dubrovnik</string>
<string name="GRO">Girona Barcelona</string>
<string name="AGA">Agadir</string>
<string name="FAO">Faro</string>
<string name="MIR">Monastir</string>
<string name="BJV">Bodrum Milas</string>
<string name="DLM">Dalaman</string>
<string name="BVA">Paris Beauvais</string>
<string name="CFU">Corfu</string>
<string name="CGN">Cologne Bonn</string>
<string name="CHQ">Chania</string>
<string name="CIA">Rome Ciampino</string>
<string name="CPH">Copenhagen</string>
<string name="CRL">Brussels Charleroi</string>
<string name="DSA">Doncaster Sheffield</string>
<string name="DTM">Dortmund</string>
<string name="DUB">Dublin</string>
<string name="EDI">Edinburgh</string>
<string name="EFL">Kefallinia</string>
<string name="EIN">Eindhoven</string>
<string name="ESB">Ankara</string>
<string name="FCO">Rome Fiumicino</string>
<string name="FRA">Frankfurt</string>
<string name="FUE">Fuerteventura</string>
<string name="GDN">Gdansk</string>
<string name="GLA">Glasgow</string>
<string name="GNB">Grenoble</string>
<string name="GOT">Gothenburg Landvetter</string>
<string name="GRQ">Groningen</string>
<string name="HAM">Hamburg</string>
<string name="HAU">Haugesund</string>
<string name="HEL">Helsinki</string>
<string name="HER">Heraklion</string>
<string name="HHN">Frankfurt Hahn</string>
<string name="HRG">Hurghada</string>
<string name="IBZ">Ibiza</string>
<string name="IEV">Kyiv Zhuliany</string>
<string name="AYT">Antalya</string>
<string name="JMK">Mykonos</string>
<string name="JTR">Santorini (Thira)</string>
<string name="KEF">Keflavik</string>
<string name="KGS">Kos</string>
<string name="KRK">Krakow</string>
<string name="KRS">Kristiansand</string>
<string name="KSU">Kristiansund</string>
<string name="LBA">Leeds Bradford</string>
<string name="LPA">Gran Canaria</string>
<string name="LPL">Liverpool</string>
<string name="LTN">London Luton</string>
<string name="MAN">Manchester</string>
<string name="MLA">Malta</string>
<string name="MMX">Malmö</string>
<string name="MOL">Molde</string>
<string name="MUC">Munich</string>
<string name="NAP">Naples</string>
<string name="NCL">Newcastle</string>
<string name="NYO">Stockholm Skavsta</string>
<string name="ORK">Cork</string>
<string name="OSL">Oslo Gardermoen</string>
<string name="PMI">Palma de Mallorca</string>
<string name="PSA">Pisa</string>
<string name="RDO">Radom</string>
<string name="RHO">Rhodes</string>
<string name="RYG">Oslo Rygge</string>
<string name="SKG">Thessaloniki</string>
<string name="SPC">La Palma</string>
<string name="SSH">Sharm el Sheikh</string>
<string name="STN">London Stansted</string>
<string name="SVG">Stavanger</string>
<string name="TFN">Tenerife North</string>
<string name="TFS">Tenerife South</string>
<string name="TKU">Turku</string>
<string name="TLV">Tel Aviv</string>
<string name="TRD">Trondheim</string>
<string name="TRF">Oslo Torp</string>
<string name="TXL">Berlin Tegel</string>
<string name="VAR">Varna</string>
<string name="VDA">Eilat Ovda</string>
<string name="VXO">Växjö Smaland</string>
<string name="WAW">Warsaw</string>
<string name="WRO">Wroclaw</string>
<string name="ZTH">Zakynthos</string>
</resources>
